--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,3 +8,8 @@ data_ingestion:
   #Below line tells the script where to unzip or extract the contents of data.zip
   unzip_dir: artifacts/data_ingestion
 
+data_validation:
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES: ["train", "test", "validation"]
+
