--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,10 @@
-key: value
+TrainingArguments:
+  num_train_epochs: 1
+  warmup_steps: 0
+  per_device_train_batch_size: 1
+  weight_decay: 0.01
+  logging_steps: 100
+  eval_strategy: "no"
+  eval_steps: null
+  save_strategy: "epoch"
+  gradient_accumulation_steps: 1
